--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
-    <a href="lasagna.html">lasagna</a>
+    <a href="lasagna.html">lasagna!</a>
 </body>
 </html>
